# pydarn

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .zenodo.json  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  setup.cfg  setup.py  tests.py
.github/: pull_request.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.md  deprecation_template.md  discussion_template.md  documentation_template.md  feature_template.md  question_template.md  release_template.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix_template.md  deprecation_template.md  documentation_template.md  feature_template.md
.github/workflow/: flake8PR.yml
.github/workflows/: flake8PR.yml
docs/: index.md
docs/code/: ReadDmap.md  plot_range_time.md  plot_summary.md  plot_time_series.md
docs/css/: pydarn.css
docs/dev/: PR.md  branching.md  code_review.md  communication.md  copyright_license.md  developing.md  issues.md  projects.md  pytest.md  releases.md  team.md  testing.md
docs/developer/: code_reviews.md  communications_guideline.md  general.md  mermaid_code.md  workflow_guidelines.md
docs/examples/: borealis_examples.py  iq_plot_listen.py
docs/user/: Borealis2SuperDARN.md  BorealisIO.md  SDarnRead.md  acf.md  axis.md  borealis.md  citing.md  coord_time.md  coordinates.md  darn_old.md  dmap.md  dmap_old.md  fan.md  filters.md  fov.md  grid.md  hardware.md  install.md  io.md  iq.md  logging.md  map.md  plot_fan.md  plot_radar_fov.md  power.md  range_time.md  summary.md  superdarn_data.md  time_series.md  vels_and_potentials.md
pydarn/: __init__.py  logging_config.ini  logging_config.yaml  testing.py  version.py
pydarn/borealis_io/: borealis.py  borealis_formats.py
pydarn/cdmap/: Makefile  README.txt
radar_fov_files/: 012_lons.txt  013_lats.txt  019_lats.txt  020_lons.txt  041_lats.txt  096_lons.txt  207_lats.txt  207_lons.txt  208_lats.txt
test/: test_Fan.py  test_Grid.py  test_RTP.py  test_boxcar.py  test_hdw.py  test_logging.py  test_maps.py  test_script.py  test_utils.py  tests.py
(+226 files in other folders)
