[metadata]
license_files = LICENSE
name = pydarn
version = attr: pydarn.version.__version__
author = SuperDARN Data Visualization Working Group
long_description = file: README.md
long_description_content_type = text/markdown
description = Data visualization library for SuperDARN data
url = https://pydarn.readthedocs.io/en/latest/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
packages = find_namespace:
include_package_data = True
install_requires =
    pyyaml
    numpy
    matplotlib>=3.3.4
    aacgmv2
    pydarnio>=1.1.0

[options.packages.find]
exclude =
    test*
    test_files*
    docs*
    build*
